Ajuste consultas para filtrar y buscar correctamente entre base actual y legacy